added flexbox to section titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ section {
     font-size: 16px;
 }
 
-.intro {
+.intro p {
     text-align: center;
 }
 
@@ -156,17 +156,17 @@ section {
 }
 
 .steps {
-    text-align: center;
     background-color: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -202,7 +202,7 @@ section {
 }
 
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -248,7 +248,6 @@ section {
 }
 
 .contact {
-    text-align: center;
     background-color: #024e76;
 }
 
@@ -283,4 +282,8 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
